--- a/source/styles/index/about.scss
+++ b/source/styles/index/about.scss
@@ -9,6 +9,17 @@
   padding-left: 30px;
   padding-right: 30px;
   box-sizing: border-box;
+  @media (min-width: $width-tablet) {
+    position: relative;
+    width: 768px;
+    height: 1150px;
+    padding-left: 50px;
+    padding-right: 50px;
+    background-image: url(../../source/images/tablet/img/about/review.jpg);
+    background-position-x: 0px;
+    background-position-y: 590px;
+    background-repeat: no-repeat;
+  }
 
   &__large-text {
     font-family: $font-family;
@@ -19,11 +30,35 @@
     letter-spacing: 0.7px;
     margin-bottom: 32px;
     margin-top: 0;
+    @media (min-width: $width-tablet) {
+      font-size: 43px;
+      line-height: 50px;
+      font-weight: 800;
+      margin-bottom: 48px;
+    }
+  }
+
+  &__wraper{
+    @media (min-width: $width-tablet) {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 129px;
+    }
+  }
+  
+  &__parts{
+    @media (min-width: $width-tablet) {
+      height: 440px;
+      width: 334px;
+    }
   }
 
   &__part {
     width: 260px;
     height: 126px;
+    @media (min-width: $width-tablet) {
+      height: 157px;
+    }
   }
 
   &__part h3 {
@@ -35,6 +70,11 @@
     letter-spacing: 1px;
     margin-top: 0;
     margin-bottom: 0;
+    @media (min-width: $width-tablet) {
+      font-size: 20px;
+      line-height: 22px;
+      letter-spacing: 1.2px;
+    }
   }
 
   &__part:nth-child(1) img {
@@ -70,27 +110,60 @@
   }
 
   &__parts:nth-child(2) {
+    & h3{
+      @media (min-width: $width-tablet) {
+        width: 299px;
+      }
+    }
+    
     & :nth-child(1) img {
       margin-bottom: 13px;
       margin-top: -7px;
       margin-left: 4px;
+      @media (min-width: $width-tablet) {
+        margin-bottom: 13px;
+        margin-top: 4px;
+        margin-left: 4px;
+      }
     }
 
     & :nth-child(2) img {
       margin-top: -8px;
       margin-left: -5px;
       margin-bottom: 23px;
+      @media (min-width: $width-tablet) {
+        margin-bottom: 21px;
+        margin-left: -5px;
+        margin-top: 4px;
+      }
     }
 
     & :nth-child(3) img {
       margin-top: -13px;
       margin-left: 3px;
       margin-bottom: 16px;
+      @media (min-width: $width-tablet) {
+        margin-top: 0;
+        margin-bottom: 16px;
+        margin-left: 3px;
+      }
     }
   }
 
   &__feedback {
     margin-bottom: 45px;
+    @media (min-width: $width-tablet) {
+      position: relative;
+      margin-bottom: 28px;
+    }
+  }
+
+  &__feedback-wraper{
+    @media (min-width: $width-tablet) {
+      display: flex;
+      justify-content: space-between;
+      align-content: center;
+    }
   }
 
   &__feedback h3 {
@@ -102,6 +175,11 @@
     letter-spacing: 1.7px;
     margin-top: 8px;
     margin-bottom: 25px;
+    @media (min-width: $width-tablet) {
+      font-size: 43px;
+      line-height: 50px;
+      margin-bottom: 48px;
+    }
   }
 
   &__feedback h4 {
@@ -113,6 +191,9 @@
     letter-spacing: 1px;
     margin-top: 26px;
     margin-bottom: 3px;
+    @media (min-width: $width-tablet) {
+      letter-spacing: 1.6px;
+    }
   }
 
   &__feedback p {
@@ -121,6 +202,10 @@
     font-weight: bold;
     line-height: 30px;
     color: #444444;
+    @media (min-width: $width-tablet) {
+      letter-spacing: 1px;
+      margin-bottom: 33px;
+    }
   }
 
   &__feedback p:nth-child(4) {
@@ -133,11 +218,20 @@
     align-content: space-between;
     margin-top: 29px;
     margin-bottom: 38px;
+    @media (min-width: $width-tablet) {
+      width: 174px;
+      margin-top: 41px;
+    }
 
     & img {
       width: 130px;
       border: solid #ececec 1px;
       padding: 12px 31px 12px 27px;
+      @media (min-width: $width-tablet) {
+        width: 87px;
+        border: none;
+        padding: 0;
+      }
     }
   }
 
@@ -152,6 +246,12 @@
     background-color: #ffffff;
     border: 2px solid #444444;
     cursor: pointer;
+    @media (min-width: $width-tablet) {
+      position: relative;
+      top: -365px;
+      right: -493px;
+      width: 175px;
+    }
   }
 
   &__wavy-line {
@@ -159,5 +259,11 @@
     width: 320px;
     margin-left: -30px;
     background-image: url(../../static/images/mobile/svg/featured/zigzag-line-desktop.svg);
+    @media (min-width: $width-tablet) {
+      height: 23px;
+      width: 768px;
+      margin-left: -50px;
+      background-image: url(../../source/images/tablet/svg/featured/zigzag-line-desktop.svg);
+    }
   }
 }
