--- a/source/styles/index/featured.scss
+++ b/source/styles/index/featured.scss
@@ -10,6 +10,44 @@
   padding-left: 30px;
   padding-right: 30px;
   box-sizing: border-box;
+  @media (min-width: $width-tablet) {
+    display: grid;
+    height: 673px;
+    width: 768px;
+    grid-template-columns: 334px 334px;
+    grid-template-rows: 150px 295px 57px 100px;
+    padding-top: 1px;
+    padding-left: 50px;
+    padding-right: 50px;
+    grid-template-areas:
+      "wt wt"
+      "w	i"
+      "p	i"
+      "b	i";
+  }
+
+  &__wraper {
+    @media (min-width: $width-tablet) {
+      grid-area: w;
+      width: 334px;
+      float: left;
+      box-sizing: border-box;
+      margin-top: -9px;
+    }
+  }
+
+  &__wraper-text {
+    @media (min-width: $width-tablet) {
+      grid-area: wt;
+      height: 45px;
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+      margin-top: 53px;
+      padding-left: 0;
+      padding-right: 22px;
+    }
+  }
 
   &__large-text {
     font-family: $font-family;
@@ -19,6 +57,12 @@
     color: #000000;
     letter-spacing: 1.3px;
     margin-bottom: 4px;
+    @media (min-width: $width-tablet) {
+      font-size: 43px;
+      line-height: 60px;
+      letter-spacing: 2px;
+      margin: 0;
+    }
   }
 
   &__small-text {
@@ -29,6 +73,12 @@
     color: #63d1bb;
     letter-spacing: 0.7px;
     margin-bottom: 23px;
+    @media (min-width: $width-tablet) {
+      height: 45px;
+      width: 80px;
+      margin: 0;
+      text-align: center;
+    }
   }
 
   &__area-text {
@@ -38,6 +88,12 @@
     line-height: 24px;
     color: #444444;
     margin-bottom: 22px;
+    @media (min-width: $width-tablet) {
+      width: 297px;
+      margin-bottom: 40px;
+      letter-spacing: 1px;
+      line-height: 30px;
+    }
   }
 
   &__table {
@@ -83,6 +139,11 @@
     text-align: center;
     letter-spacing: 0.5px;
     margin-bottom: 26px;
+    @media (min-width: $width-tablet) {
+      width: 289px;
+      grid-area: p;
+      font-size: 20px;
+    }
   }
 
   &__butoon {
@@ -93,12 +154,22 @@
     border: 2px solid #444444;
     cursor: pointer;
     margin-bottom: 28px;
+    @media (min-width: $width-tablet) {
+      grid-area: b;
+      width: 290px;
+      font-size: 17px;
+    }
   }
 
   &__image {
     height: 315px;
     width: 260px;
     margin-bottom: 20px;
+    @media (min-width: $width-tablet) {
+      height: 404px;
+      width: 333px;
+      grid-area: i;
+    }
   }
 
   &__wavy-line {
@@ -106,5 +177,11 @@
     width: 320px;
     margin-left: -30px;
     background-image: url(../../static/images/mobile/svg/featured/zigzag-line-desktop.svg);
+    @media (min-width: $width-tablet) {
+      height: 23px;
+      width: 768px;
+      margin-left: -50px;
+      background-image: url(../../source/images/tablet/svg/featured/zigzag-line-desktop.svg);
+    }
   }
 }
