--- a/source/styles/mainStyles/modal-menu.scss
+++ b/source/styles/mainStyles/modal-menu.scss
@@ -11,6 +11,14 @@
   margin-right: auto;
   height: 315px;
   transition: display 1s;
+  @media (min-width: $width-tablet) {
+    position: relative;
+    margin-left: 0;
+    height: 89px;
+    width: 399px;
+    transition: none;
+    flex-direction: row;
+  }
 
   &__part {
     position: relative;
@@ -24,15 +32,63 @@
     text-decoration: none;
     color: #000000;
     border-bottom: solid #a9bbb1 1px;
+    @media (min-width: $width-tablet) {
+      border: none;
+      width: 83px;
+      height: 88px;
+      box-sizing: border-box;
+      border-left: 1px solid #ececec;
+    }
 
     &:first-child {
       border-top: solid #a9bbb1 1px;
+      @media (min-width: $width-tablet) {
+        position: absolute;
+        width: 167px;
+        top: 79px;
+        left: -319px;
+        letter-spacing: -0.3px;
+        border: none;
+        padding: 0;
+        z-index: 5;
+      }
+    }
+
+    &:nth-child(2) {
+      @media (min-width: $width-tablet) {
+        position: absolute;
+        width: 167px;
+        top: 79px;
+        left: -152px;
+        letter-spacing: -0.3px;
+        border: none;
+        padding: 0;
+        z-index: 5;
+      }
+    }
+
+    &:nth-child(3) p {
+      @media (min-width: $width-tablet) {
+        display: none;
+      }
+    }
+
+    &:nth-child(4) p {
+      @media (min-width: $width-tablet) {
+        width: 316px;
+        margin-top: 3px;
+        margin-left: 7px;
+      }
     }
 
     & img {
       position: absolute;
       left: 30px;
       top: 31px;
+      @media (min-width: $width-tablet) {
+        left: 33px;
+        top: 37px;
+      }
     }
   }
 }
