--- a/source/styles/index/contact.scss
+++ b/source/styles/index/contact.scss
@@ -11,25 +11,40 @@
   box-sizing: border-box;
   background-color: #ffffff;
   @media (min-width: $width-tablet) {
-		position: relative;
-		width: 768px;
-		height: 909px;
-		padding-left: 50px;
-		padding-right: 50px;
-		padding-top: 43px;
+    position: relative;
+    width: 768px;
+    height: 909px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 43px;
+  }
+  @media (min-width: $width-desktop) {
+    display: grid;
+    height: 602px;
+    width: 1250px;
+    grid-template-columns: 172px 402px 525px;
+    grid-template-rows: 402px 180px;
+    padding-left: 100px;
+    padding-right: 100px;
+    grid-template-areas: ". cw	cm"
+                         ". cb	cm";
   }
 
   &::after{
-		@media (min-width: $width-tablet) {
-			content: '';
-			height: 81px;
-			width: 47px;
-			position: absolute;
-			top: 28px;
-			right: 53px;
-			background-image: url(../../source/images/tablet/svg/contact/flag.svg);
-		}
-	}
+    @media (min-width: $width-tablet) {
+      content: '';
+      height: 81px;
+      width: 47px;
+      position: absolute;
+      top: 28px;
+      right: 53px;
+      background-image: url(../../source/images/tablet/svg/contact/flag.svg);
+    }
+    @media (min-width: $width-desktop) {
+      top: 102px;
+      left: 163px;
+    }
+  }
 
   & h3 {
     font-family: $font-family;
@@ -41,11 +56,17 @@
     margin-bottom: 23px;
     margin-top: 0;
     @media (min-width: $width-tablet) {
-			font-size: 43px;
-			line-height: 50px;
-			letter-spacing: 2px;
-			margin-bottom: 48px;
-		}
+      font-size: 43px;
+      line-height: 50px;
+      letter-spacing: 2px;
+      margin-bottom: 48px;
+    }
+    @media (min-width: $width-desktop) {
+      font-size: 53px;
+      line-height: 57px;
+      letter-spacing: 3px;
+      margin-bottom: 48px;
+    }
   }
 
   &__info {
@@ -56,8 +77,12 @@
     color: #444444;
     margin-bottom: 34px;
     @media (min-width: $width-tablet) {
-			display: flex;
-		}
+      display: flex;
+    }
+    @media (min-width: $width-desktop) {
+      width: 525px;
+      flex-wrap: wrap;
+    }
   }
 
   &__part {
@@ -67,27 +92,31 @@
       padding-top: 4px;
       margin-bottom: 30px;
       @media (min-width: $width-tablet) {
-				padding-top: 0;
-			}
+        padding-top: 0;
+      }
     }
 
     & p:first-child {
       width: 82px;
       @media (min-width: $width-tablet) {
-				width: 79px;
-			}
+        width: 79px;
+      }
     }
     @media (min-width: $width-tablet) {
-			width: 334px;
-			letter-spacing: 0.8px;
-		}
+      width: 334px;
+      letter-spacing: 0.8px;
+    }
   }
 
   &__wraper{
-		@media (min-width: $width-tablet) {
-			margin-bottom: 57px;
-		}
-	}
+    @media (min-width: $width-tablet) {
+      margin-bottom: 57px;
+    }
+    @media (min-width: $width-desktop) {
+      grid-area: cw;
+      margin-top: 68px;
+    }
+  }
 
   tr:nth-child(1) {
     height: 58px;
@@ -116,11 +145,16 @@
     margin-left: -27px;
     margin-bottom: 32px;
     @media (min-width: $width-tablet) {
-			height: 458px;
-			width: 768px;
-			margin-left: -50px;
-			margin-bottom: 50px;
-		}
+      height: 458px;
+      width: 768px;
+      margin-left: -50px;
+      margin-bottom: 50px;
+    }
+    @media (min-width: $width-desktop) {
+      grid-area: cm;
+      height: 460px;
+      width: 525px;
+    }
   }
 
   &__button {
@@ -136,11 +170,15 @@
     cursor: pointer;
     margin-left: 3px;
     @media (min-width: $width-tablet) {
-			display: inline-block;
-			width: 230px;
-			margin-left: 219px;
-			font-size: 17px;
-			letter-spacing: 1px;
-		}
+      display: inline-block;
+      width: 230px;
+      margin-left: 219px;
+      font-size: 17px;
+      letter-spacing: 1px;
+    }
+    @media (min-width: $width-desktop) {
+      grid-area: cb;
+      margin-left: 3px;
+    }
   }
 }
