--- a/source/styles/index/featured.scss
+++ b/source/styles/index/featured.scss
@@ -25,6 +25,20 @@
       "p	i"
       "b	i";
   }
+  @media (min-width: $width-desktop) {
+    display: grid;
+    grid-template-columns: 350px 525px;
+    grid-template-rows: 235px 361px 57px 122px;
+    height: 863px;
+    width: 1250px;
+    padding-left: 275px;
+    padding-right: 100px;
+    grid-template-areas:
+      "wt i"
+      "w	i"
+      "p	i"
+      "b	i";
+  }
 
   &__wraper {
     @media (min-width: $width-tablet) {
@@ -33,6 +47,9 @@
       float: left;
       box-sizing: border-box;
       margin-top: -9px;
+    }
+    @media (min-width: $width-desktop) {
+      width: 350px;
     }
   }
 
@@ -46,6 +63,14 @@
       margin-top: 53px;
       padding-left: 0;
       padding-right: 22px;
+    }
+    @media (min-width: $width-desktop) {
+      flex-direction: row-reverse;
+      position: relative;
+      width: 651px;
+      top: 79px;
+      left: -133px;
+      padding-right: 0px;
     }
   }
 
@@ -63,6 +88,12 @@
       letter-spacing: 2px;
       margin: 0;
     }
+    @media (min-width: $width-desktop) {
+      grid-area: lt;
+      font-size: 53px;
+      line-height: 57px;
+      letter-spacing: 2.5px;
+    }
   }
 
   &__small-text {
@@ -79,6 +110,9 @@
       margin: 0;
       text-align: center;
     }
+    @media (min-width: $width-desktop) {
+      grid-area: st;
+    }
   }
 
   &__area-text {
@@ -93,6 +127,9 @@
       margin-bottom: 40px;
       letter-spacing: 1px;
       line-height: 30px;
+    }
+    @media (min-width: $width-desktop) {
+      margin-bottom: 52px;
     }
   }
 
@@ -170,6 +207,11 @@
       width: 333px;
       grid-area: i;
     }
+    @media (min-width: $width-desktop) {
+      height: 704px;
+      width: 525px;
+      padding-top: 68px;
+    }
   }
 
   &__wavy-line {
@@ -182,6 +224,11 @@
       width: 768px;
       margin-left: -50px;
       background-image: url(../../source/images/tablet/svg/featured/zigzag-line-desktop.svg);
+    }
+    @media (min-width: $width-desktop) {
+      width: 1050px;
+      margin-left: -175px;
+      background-image: url(../../source/images/desktop/svg/featured/zigzag-line-desktop.svg);
     }
   }
 }
