--- a/source/styles/index/header.scss
+++ b/source/styles/index/header.scss
@@ -14,12 +14,22 @@
     width: 768px;
     background-image: url(../../source/images/tablet/img/header/hero-desktop.jpg);
   }
+  @media (min-width: $width-desktop) {
+    height: 746px;
+    width: 1250px;
+    background-image: url(../../source/images/desktop/img/header/hero-desktop.jpg);
+    background-position-x: 51px;
+  }
 
   &__part {
     position: relative;
     top: 283px;
     @media (min-width: $width-tablet) {
       top: 627px;
+    }
+    @media (min-width: $width-desktop) {
+      margin-left: 100px;
+      margin-right: 50px;
     }
     
     &:after{
@@ -30,6 +40,14 @@
         width: 768px;
         bottom: 0;
         background-image: url(../../source/images/tablet/svg/header/zigzag-fill-desktop.svg);
+      }
+      @media (min-width: $width-desktop) {
+        position: absolute;
+        height: 34px;
+        width: 1250px;
+        bottom: 0;
+        background-image: url(../../source/images/desktop/svg/header/zigzag-fill-desktop.svg);
+        left: -100px;
       }
     }
   }
@@ -55,6 +73,14 @@
       left: 240px;
       letter-spacing: 2.5px;
     }
+    @media (min-width: $width-desktop) {
+      font-size: 53px;
+      line-height: 57px;
+      width: 720px;
+      top: 108px;
+      left: 396px;
+      letter-spacing: 2.9px;
+    }
   }
 
   &__top {
@@ -67,6 +93,14 @@
       top: 20px;
       right: 50px;
     }
+    @media (min-width: $width-desktop) {
+      align-items: flex-end;
+      justify-content: space-between;
+      width: 1050px;
+      height: 160px;
+      left: 100px;
+      top: -120px;
+    }
     
     & a{
       text-decoration: none;
@@ -74,11 +108,27 @@
       font-weight: bold;
       margin-right: 33px;
       letter-spacing: 0.9px;
+      @media (min-width: $width-desktop) {
+        margin: 0;
+      }
+    }
+
+    &-parts{
+      @media (min-width: $width-desktop) {
+        display: flex;
+        width: 380px;
+      }
     }
 
     &-part{
       @media (min-width: $width-tablet) {
         display: none;
+      }
+      @media (min-width: $width-desktop) {
+        width: 317px;
+        display: flex;
+        margin-right: 0;
+        justify-content: space-between;
       }
     }
   }
@@ -107,10 +157,13 @@
   &__button:first-child {
     background-color: #63d1bb;
     @media (min-width: $width-tablet) {
-      // width: 262px;
       width: 334px;
       float: left;
       margin-left: 50px;
+    }
+    @media (min-width: $width-desktop) {
+      width: 525px;
+      margin-left: 0;
     }
   }
 
@@ -133,6 +186,10 @@
     @media (min-width: $width-tablet) {
       line-height: 29px;
       letter-spacing: 1.4px;
+    }
+    @media (min-width: $width-desktop) {
+      font-size: 20px;
+      line-height: 30px;
     }
   }
 }
