--- a/source/styles/mainStyles/top-menu.scss
+++ b/source/styles/mainStyles/top-menu.scss
@@ -17,6 +17,9 @@
     min-height: 89px;
     width: 369px;
   }
+  @media (min-width: $width-desktop) {
+    width: 799px;
+  }
 
   &__logo {
     height: 35px;
@@ -31,12 +34,21 @@
       width: 113px;
       background: url(../../source/images/tablet/svg/top-menu/mishka-logo-tablet.svg) no-repeat;
     }
+    @media (min-width: $width-desktop) {
+      margin-left: 520px;
+      height: 72px;
+      width: 149px;
+      background: url(../../source/images/desktop/svg/top-menu/mishka-logo-desktop.svg) no-repeat;
+    }
 
     &:hover {
       background: url(../../static/images/mobile/svg/top-menu/mishka-logo-mobile_hover.svg)
         no-repeat;
       @media (min-width: $width-tablet) {
         background: url(../../source/images/tablet/svg/top-menu/mishka-logo-tablet_hover.svg) no-repeat;
+      }
+      @media (min-width: $width-desktop) {
+        background: url(../../source/images/desktop/svg/top-menu/mishka-logo-desktop_hover.svg) no-repeat;
       }
     }
 
@@ -45,6 +57,9 @@
         no-repeat;
       @media (min-width: $width-tablet) {
         background: url(../../source/images/tablet/svg/top-menu/mishka-logo-tablet_active.svg) no-repeat;
+      }
+      @media (min-width: $width-desktop) {
+        background: url(../../source/images/desktop/svg/top-menu/mishka-logo-desktop_active.svg) no-repeat;
       }
     }
   }
