--- a/source/styles/catalog/items.scss
+++ b/source/styles/catalog/items.scss
@@ -3,6 +3,13 @@
 .items {
   height: 1237px;
   width: 320px;
+  @media (min-width: $width-tablet) {
+    height: 1115px;
+    width: 768px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 49px;
+  }
 
   &__part {
     height: 375px;
@@ -10,13 +17,30 @@
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
+    @media (min-width: $width-tablet) {
+      width: 768px;
+      display: flex;
+      margin-left: 50px;
+      margin-right: 50px;
+      margin-bottom: 13px;
+    }
 
     &:last-child {
       & .items__large-text {
         width: 205px;
       }
+
+      & .items__small-text {
+        @media (min-width: $width-tablet) {
+          margin-bottom: 155px;
+        }
+      }
+      
       & .items__content {
         height: 178px;
+        @media (min-width: $width-tablet) {
+          height: 334px;
+        }
       }
     }
   }
@@ -24,6 +48,10 @@
   &__image {
     height: 195px;
     width: 260px;
+    @media (min-width: $width-tablet) {
+      height: 334px;
+      width: 334px;
+    }
   }
 
   &__content {
@@ -32,6 +60,12 @@
     padding-top: 27px;
     padding-left: 28px;
     margin-top: -4px;
+    @media (min-width: $width-tablet) {
+      height: 334px;
+      width: 334px;
+      box-sizing: border-box;
+      margin-top: 0;
+    }
   }
 
   &__large-text {
@@ -41,12 +75,19 @@
     line-height: 24px;
     letter-spacing: 1px;
     margin-bottom: 11px;
+    @media (min-width: $width-tablet) {
+      font-size: 20px;
+    }
   }
 
   &__small-text {
     font-family: $font-family;
     font-size: 13px;
     margin-bottom: 24px;
+    @media (min-width: $width-tablet) {
+      font-size: 15px;
+      margin-bottom: 179px;
+    }
   }
 
   &__price {
@@ -58,12 +99,19 @@
     justify-content: left;
     font-size: 15px;
     font-weight: bold;
+    @media (min-width: $width-tablet) {
+      font-size: 17px;
+    }
 
     &::after {
       content: url(../../static/images/mobile/svg/catalog_items/cart.svg);
       position: absolute;
       left: 183px;
       top: 22px;
+      @media (min-width: $width-tablet) {
+        left: 252px;
+        top: 21px;
+      }
     }
 
     &::before {
@@ -74,6 +122,9 @@
       height: 1px;
       left: 0px;
       background: #ececec;
+      @media (min-width: $width-tablet) {
+        width: 268px;
+      }
     }
   }
 }
