--- a/source/styles/catalog/items.scss
+++ b/source/styles/catalog/items.scss
@@ -10,6 +10,14 @@
     flex-wrap: wrap;
     margin-bottom: 49px;
   }
+  @media (min-width: $width-desktop) {
+    height: 660px;
+    width: 1050px;
+    flex-wrap: nowrap;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-bottom: 56px;
+  }
 
   &__part {
     height: 375px;
@@ -24,6 +32,12 @@
       margin-right: 50px;
       margin-bottom: 13px;
     }
+    @media (min-width: $width-desktop) {
+      height: 660px;
+      width: 315px;
+      flex-wrap: wrap;
+      margin-right: 1px;
+    }
 
     &:last-child {
       & .items__large-text {
@@ -34,12 +48,18 @@
         @media (min-width: $width-tablet) {
           margin-bottom: 155px;
         }
+        @media (min-width: $width-desktop) {
+          margin-bottom: 16px;
+        }
       }
       
       & .items__content {
         height: 178px;
         @media (min-width: $width-tablet) {
           height: 334px;
+        }
+        @media (min-width: $width-desktop) {
+          height: 198px;
         }
       }
     }
@@ -51,6 +71,9 @@
     @media (min-width: $width-tablet) {
       height: 334px;
       width: 334px;
+    }
+    @media (min-width: $width-desktop) {
+      height: 462px;
     }
   }
 
@@ -65,6 +88,9 @@
       width: 334px;
       box-sizing: border-box;
       margin-top: 0;
+    }
+    @media (min-width: $width-desktop) {
+      height: 198px;
     }
   }
 
@@ -87,6 +113,9 @@
     @media (min-width: $width-tablet) {
       font-size: 15px;
       margin-bottom: 179px;
+    }
+    @media (min-width: $width-desktop) {
+      margin-bottom: 40px;
     }
   }
 
@@ -111,6 +140,10 @@
       @media (min-width: $width-tablet) {
         left: 252px;
         top: 21px;
+      }
+      @media (min-width: $width-desktop) {
+        left: 235px;
+        top: 23px;
       }
     }
 
